# DPTrainer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release-package.yaml
docs/: README.md  configuration.md  examples.md  getting-started.md
src/dptrainer/: __init__.py  callback.py  early_stopping.py  privacy_arguments.py  privatize_trainer.py  trainer.py
src/dptrainer/utils/: __init__.py  set_loss_function.py
tests/dptrainer/: conftest.py  test_dp_callback.py  test_dp_trainer.py  test_hooks_integration.py  test_integration_slow.py  test_privacy_arguments.py  test_set_loss_function.py  test_utils.py
