[project]
name = "DPTrainer"
version = "0.1.0"
description = "Differential privacy training utilities for PyTorch and Hugging Face Transformers, powered by Opacus."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JetBrains s.r.o."},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "accelerate>=1.10.0",
    "numpy>=2.2",
    "transformers>=4.54.1",
    "datasets>=3.5",
    "torch>=2.6",
    "opacus==1.5.4.post13",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "peft>=0.17.1",
    "pytest",
    "pandas-stubs==2.3.2.250926",
]

[project.urls]
Documentation = "https://github.com/JetBrains-Research/DPTrainer/tree/main/docs"
Repository = "https://github.com/JetBrains-Research/DPTrainer"
Issues = "https://github.com/JetBrains-Research/DPTrainer/issues"

[tool.uv]
package = true
#
[[tool.uv.index]]
name = "jbr-fed-python"
url = "https://europe-west4-python.pkg.dev/jetbrains-ml4se-fed/jbr-fed-python/simple"
publish-url = "https://europe-west4-python.pkg.dev/jetbrains-ml4se-fed/jbr-fed-python"
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dptrainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for test categorization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
